tests/neg/toplevel-overload/Test_3.scala
class C extends A, B

val c = new C

val d = f(c)  // error: ambiguous overload

